# troubleshoot-scala3-bazelbsp

./: .gitignore  .scalafix.conf  .scalafmt.conf  BUILD.bazel  README.md  WORKSPACE.bazel  projectview.bazelproject
.devcontainer/: devcontainer.json
foo/src/main/scala/foo/: BUILD.bazel  MainApp.scala
