load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "app",
    srcs = [
        "MainApp.scala",
    ],
    main_class = "foo.MainApp",
    scalacopts = [
        "-Ysemanticdb",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:zio",
    ],
)
